src/test/deca/syntax/valid/parser/oracle/class_with_one_asm_method.deca
class A{
	void f(int x) asm("\"Hello \n
	\\ World
	!\"");

	int f(){
	}
}