src/test/deca/syntax/invalid/parser/with_object/field_multi_string.deca
class A { int a = "
		Multi line string";}